--- a/MemoriaFlora/Storyboards/Flowers.storyboard
+++ b/MemoriaFlora/Storyboards/Flowers.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="m1G-J5-mdH">
-                                <rect key="frame" x="10" y="98" width="383" height="150"/>
+                                <rect key="frame" x="10" y="122" width="383" height="150"/>
                                 <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="Bla-pf-G7T"/>
@@ -37,13 +37,13 @@
                                 <cells/>
                             </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="For Loved Ones" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S4L-0C-aZl">
-                                <rect key="frame" x="24" y="272" width="133" height="23"/>
+                                <rect key="frame" x="24" y="296" width="133" height="23"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="uSm-EI-BhD">
-                                <rect key="frame" x="12" y="307" width="381" height="250"/>
+                                <rect key="frame" x="12" y="331" width="381" height="250"/>
                                 <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="C9y-KC-99A"/>
@@ -57,7 +57,7 @@
                                 <cells/>
                             </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose from these categories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tax-Up-iRt">
-                                <rect key="frame" x="24.000000000000014" y="67" width="254.33333333333337" height="23"/>
+                                <rect key="frame" x="24.000000000000014" y="91" width="254.33333333333337" height="23"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -69,7 +69,7 @@
                             <constraint firstItem="m1G-J5-mdH" firstAttribute="top" secondItem="Tax-Up-iRt" secondAttribute="bottom" constant="8" id="13f-X2-2IC"/>
                             <constraint firstItem="S4L-0C-aZl" firstAttribute="top" secondItem="m1G-J5-mdH" secondAttribute="bottom" constant="24" id="5Gv-we-Fva"/>
                             <constraint firstItem="Tax-Up-iRt" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="A5w-Xw-NVU"/>
-                            <constraint firstItem="Tax-Up-iRt" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="8" id="AsW-UQ-Tbx"/>
+                            <constraint firstItem="Tax-Up-iRt" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="32" id="AsW-UQ-Tbx"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="uSm-EI-BhD" secondAttribute="trailing" id="NCg-Oe-tv9"/>
                             <constraint firstItem="m1G-J5-mdH" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="eWc-fg-F2b"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="m1G-J5-mdH" secondAttribute="trailing" id="g78-04-NMC"/>
@@ -108,18 +108,67 @@
                                     <constraint firstAttribute="width" constant="55" id="pxB-6x-6mg"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="circle_unfilled" translatesAutoresizingMaskIntoConstraints="NO" id="ydD-lj-nmG">
-                                <rect key="frame" x="55.333333333333343" y="271.33333333333331" width="26" height="26"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="26" id="KK8-Ti-OAP"/>
-                                    <constraint firstAttribute="height" constant="26" id="vVH-xM-EkI"/>
-                                </constraints>
-                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="AUp-uK-8UH">
+                                <rect key="frame" x="65" y="256" width="136" height="70"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle_unfilled" translatesAutoresizingMaskIntoConstraints="NO" id="ydD-lj-nmG">
+                                        <rect key="frame" x="0.0" y="22" width="26" height="26"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="26" id="KK8-Ti-OAP"/>
+                                            <constraint firstAttribute="height" constant="26" id="vVH-xM-EkI"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stripe" translatesAutoresizingMaskIntoConstraints="NO" id="eUg-fl-pYg">
+                                        <rect key="frame" x="36" y="0.0" width="100" height="70"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="JtN-hL-ZMw"/>
+                                            <constraint firstAttribute="height" constant="70" id="VRQ-wa-1qi"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="YhF-DV-mLl">
+                                <rect key="frame" x="65" y="347" width="136" height="60"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle_unfilled" translatesAutoresizingMaskIntoConstraints="NO" id="C5z-NK-5o7">
+                                        <rect key="frame" x="0.0" y="17" width="26" height="26"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="26" id="9i9-bh-a2v"/>
+                                            <constraint firstAttribute="height" constant="26" id="rs0-Jw-3T8"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple_pay" translatesAutoresizingMaskIntoConstraints="NO" id="BDb-HB-kXA">
+                                        <rect key="frame" x="36" y="0.0" width="100" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="3xG-Gc-4Lk"/>
+                                            <constraint firstAttribute="height" constant="60" id="I6A-Dr-mkY"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" alignment="center" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="06t-dx-EC2">
+                                <rect key="frame" x="65" y="454" width="159" height="70"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle_unfilled" translatesAutoresizingMaskIntoConstraints="NO" id="grh-FO-IiX">
+                                        <rect key="frame" x="0.0" y="22" width="26" height="26"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="26" id="dal-aX-A0H"/>
+                                            <constraint firstAttribute="height" constant="26" id="v4c-pN-6Y3"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stripe" translatesAutoresizingMaskIntoConstraints="NO" id="dyU-gu-rqd">
+                                        <rect key="frame" x="59" y="0.0" width="100" height="70"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="70" id="IsT-8c-gmQ"/>
+                                            <constraint firstAttribute="width" constant="100" id="fCS-GR-1qo"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fxr-QG-AAd"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="ydD-lj-nmG" firstAttribute="leading" secondItem="YHI-wv-iND" secondAttribute="leading" constant="-10" id="02T-bx-wCD"/>
                             <constraint firstItem="mni-aV-zFo" firstAttribute="top" secondItem="fxr-QG-AAd" secondAttribute="top" constant="32" id="Ia5-Ic-rcL"/>
                             <constraint firstItem="YHI-wv-iND" firstAttribute="top" secondItem="mni-aV-zFo" secondAttribute="bottom" constant="24" id="LA7-sK-wec"/>
                             <constraint firstItem="YHI-wv-iND" firstAttribute="centerX" secondItem="Yvq-eU-evm" secondAttribute="centerX" id="ZO8-gO-LIl"/>
@@ -129,12 +178,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3T7-71-eBG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="912" y="4"/>
+            <point key="canvasLocation" x="910.68702290076328" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
         <image name="Wallet" width="54.666667938232422" height="49"/>
+        <image name="apple_pay" width="512" height="399"/>
         <image name="circle_unfilled" width="27" height="27"/>
+        <image name="stripe" width="100" height="100"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
