--- a/MemoriaFlora/Storyboards/Base.lproj/Main.storyboard
+++ b/MemoriaFlora/Storyboards/Base.lproj/Main.storyboard
@@ -382,13 +382,13 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signup" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uz9-o3-oca">
-                                <rect key="frame" x="157.66666666666666" y="257" width="112.66666666666666" height="38.333333333333314"/>
+                                <rect key="frame" x="157.66666666666666" y="252.00000000000003" width="112.66666666666666" height="38.333333333333343"/>
                                 <fontDescription key="fontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="32"/>
                                 <color key="textColor" red="0.2784313725" green="0.2784313725" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="gKN-vk-e1o">
-                                <rect key="frame" x="40" y="315.33333333333331" width="348" height="221.99999999999994"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="gKN-vk-e1o">
+                                <rect key="frame" x="40" y="306.33333333333331" width="348" height="301.99999999999994"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S9z-cU-kgg" customClass="DesignableTextField" customModule="Spring">
                                         <rect key="frame" x="0.0" y="0.0" width="348" height="45"/>
@@ -417,7 +417,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xIz-3y-SMq" customClass="DesignableTextField" customModule="Spring">
-                                        <rect key="frame" x="0.0" y="59" width="348" height="45"/>
+                                        <rect key="frame" x="0.0" y="63" width="348" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="b8a-vN-dwf"/>
                                         </constraints>
@@ -443,7 +443,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Mwy-1R-oOI" customClass="DesignableTextField" customModule="Spring">
-                                        <rect key="frame" x="0.0" y="118" width="348" height="45"/>
+                                        <rect key="frame" x="0.0" y="126" width="348" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="bgt-ZF-uha"/>
                                         </constraints>
@@ -469,7 +469,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder=" Confirm Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G13-0r-Imo" customClass="DesignableTextField" customModule="Spring">
-                                        <rect key="frame" x="0.0" y="177" width="348" height="45"/>
+                                        <rect key="frame" x="0.0" y="189" width="348" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="qUG-pn-fky"/>
                                         </constraints>
@@ -494,48 +494,52 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VW9-dF-nZa" customClass="DesignableButton" customModule="Spring">
+                                        <rect key="frame" x="0.0" y="252.00000000000006" width="348" height="50"/>
+                                        <color key="backgroundColor" red="0.47450980390000003" green="0.24313725489999999" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="5at-g9-xe2"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Create Account">
+                                            <fontDescription key="titleFontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="14"/>
+                                        </buttonConfiguration>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="15"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                <color key="value" red="0.47450980390000003" green="0.24313725489999999" blue="0.8980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                <real key="value" value="3"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                                <real key="value" value="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOffsetY">
+                                                <real key="value" value="3"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="signupTapped:" destination="iaT-YZ-Ljw" eventType="touchUpInside" id="Dgd-pX-g8T"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
-                            </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VW9-dF-nZa" customClass="DesignableButton" customModule="Spring">
-                                <rect key="frame" x="40" y="557.33333333333337" width="348" height="50"/>
-                                <color key="backgroundColor" red="0.47450980390000003" green="0.24313725489999999" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="5at-g9-xe2"/>
+                                    <constraint firstAttribute="trailing" secondItem="VW9-dF-nZa" secondAttribute="trailing" id="F91-QN-2uv"/>
+                                    <constraint firstItem="VW9-dF-nZa" firstAttribute="leading" secondItem="gKN-vk-e1o" secondAttribute="leading" id="Hsr-Xm-QnM"/>
                                 </constraints>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Create Account">
-                                    <fontDescription key="titleFontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="14"/>
-                                </buttonConfiguration>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="15"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
-                                        <color key="value" red="0.47450980390000003" green="0.24313725489999999" blue="0.8980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
-                                        <real key="value" value="3"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
-                                        <real key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOffsetY">
-                                        <real key="value" value="3"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="signupTapped:" destination="iaT-YZ-Ljw" eventType="touchUpInside" id="Dgd-pX-g8T"/>
-                                </connections>
-                            </button>
+                            </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_____" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tlE-ix-ggH">
-                                <rect key="frame" x="268.66666666666669" y="624.66666666666663" width="80" height="20.333333333333371"/>
+                                <rect key="frame" x="279.66666666666669" y="626.66666666666663" width="80" height="20.333333333333371"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.47450980390000003" green="0.24313725489999999" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="625-fQ-foD">
-                                <rect key="frame" x="268.66666666666669" y="615.33333333333337" width="80" height="34.333333333333371"/>
+                                <rect key="frame" x="279.66666666666669" y="617.33333333333337" width="80" height="34.333333333333371"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="GhU-qg-KnY"/>
                                 </constraints>
@@ -549,7 +553,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Already have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="myE-jY-LNC">
-                                <rect key="frame" x="81.666666666666686" y="622.33333333333337" width="195" height="20.333333333333371"/>
+                                <rect key="frame" x="92.666666666666686" y="624.33333333333337" width="195" height="20.333333333333371"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.28235294119999998" green="0.28235294119999998" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -561,20 +565,16 @@
                             <constraint firstItem="uz9-o3-oca" firstAttribute="centerX" secondItem="gW8-bU-x9B" secondAttribute="centerX" id="2ag-J8-nhO"/>
                             <constraint firstItem="tlE-ix-ggH" firstAttribute="top" secondItem="625-fQ-foD" secondAttribute="bottom" constant="-25" id="6vK-Nx-lzl"/>
                             <constraint firstItem="tlE-ix-ggH" firstAttribute="leading" secondItem="625-fQ-foD" secondAttribute="leading" id="AEI-X5-Riu"/>
-                            <constraint firstItem="VW9-dF-nZa" firstAttribute="centerX" secondItem="gKN-vk-e1o" secondAttribute="centerX" id="COT-qF-xNm"/>
-                            <constraint firstItem="VW9-dF-nZa" firstAttribute="leading" secondItem="gKN-vk-e1o" secondAttribute="leading" id="GS7-ME-Vp3"/>
+                            <constraint firstItem="myE-jY-LNC" firstAttribute="top" secondItem="gKN-vk-e1o" secondAttribute="bottom" constant="16" id="GbS-b2-yLz"/>
                             <constraint firstItem="tlE-ix-ggH" firstAttribute="trailing" secondItem="625-fQ-foD" secondAttribute="trailing" id="HPb-wT-D6l"/>
                             <constraint firstItem="ntI-ar-0px" firstAttribute="top" secondItem="gW8-bU-x9B" secondAttribute="top" constant="32" id="ML3-Av-fU2"/>
-                            <constraint firstItem="VW9-dF-nZa" firstAttribute="trailing" secondItem="gKN-vk-e1o" secondAttribute="trailing" id="T1j-tx-fck"/>
-                            <constraint firstItem="VW9-dF-nZa" firstAttribute="top" secondItem="gKN-vk-e1o" secondAttribute="bottom" constant="20" id="UcP-YT-QNs"/>
+                            <constraint firstItem="myE-jY-LNC" firstAttribute="centerX" secondItem="B6v-BM-453" secondAttribute="centerX" constant="-24" id="PJE-Y7-hrN"/>
                             <constraint firstItem="625-fQ-foD" firstAttribute="centerY" secondItem="myE-jY-LNC" secondAttribute="centerY" id="XAu-tI-Mgs"/>
-                            <constraint firstItem="gKN-vk-e1o" firstAttribute="top" secondItem="uz9-o3-oca" secondAttribute="bottom" constant="20" id="XLG-cU-wUy"/>
+                            <constraint firstItem="gKN-vk-e1o" firstAttribute="top" secondItem="uz9-o3-oca" secondAttribute="bottom" constant="16" id="XLG-cU-wUy"/>
                             <constraint firstItem="ntI-ar-0px" firstAttribute="centerX" secondItem="gW8-bU-x9B" secondAttribute="centerX" id="dJV-uS-dVS"/>
                             <constraint firstItem="gKN-vk-e1o" firstAttribute="leading" secondItem="gW8-bU-x9B" secondAttribute="leading" constant="40" id="eQV-A8-idf"/>
-                            <constraint firstItem="myE-jY-LNC" firstAttribute="top" secondItem="VW9-dF-nZa" secondAttribute="bottom" constant="15" id="hM3-kb-yLT"/>
-                            <constraint firstItem="uz9-o3-oca" firstAttribute="top" secondItem="ntI-ar-0px" secondAttribute="bottom" constant="25" id="nDk-wp-0S3"/>
+                            <constraint firstItem="uz9-o3-oca" firstAttribute="top" secondItem="ntI-ar-0px" secondAttribute="bottom" constant="20" id="nDk-wp-0S3"/>
                             <constraint firstItem="625-fQ-foD" firstAttribute="leading" secondItem="myE-jY-LNC" secondAttribute="trailing" constant="-8" id="rN7-34-T6t"/>
-                            <constraint firstItem="myE-jY-LNC" firstAttribute="centerX" secondItem="VW9-dF-nZa" secondAttribute="centerX" constant="-35" id="xe6-EK-dne"/>
                             <constraint firstItem="gW8-bU-x9B" firstAttribute="trailing" secondItem="gKN-vk-e1o" secondAttribute="trailing" constant="40" id="xzq-rZ-fKp"/>
                         </constraints>
                     </view>
